[gd_scene load_steps=19 format=3 uid="uid://ca4kvgsvw0acp"]

[ext_resource type="PackedScene" uid="uid://dmtpptjbevdi2" path="res://userinterfaces/menu_button/change_scene_button.tscn" id="1_ciaxs"]
[ext_resource type="Script" path="res://userinterfaces/acheivement_menu/acheivement_menu.gd" id="1_dqqfi"]
[ext_resource type="Texture2D" uid="uid://dif03pvt5k1o6" path="res://assets/acheivement_menu/bg.svg" id="1_pakht"]
[ext_resource type="Texture2D" uid="uid://b8q148tiayiq7" path="res://assets/shop_menu/back.png" id="2_66r80"]
[ext_resource type="PackedScene" uid="uid://c5evis4gxner6" path="res://userinterfaces/menu_button/menu_button.tscn" id="6_dwlpw"]
[ext_resource type="Texture2D" uid="uid://eywok23xutfu" path="res://assets/acheivement_menu/locked.svg" id="6_etgnq"]
[ext_resource type="Texture2D" uid="uid://co73gl5x5jkf2" path="res://assets/shop_menu/left.svg" id="7_of2x6"]
[ext_resource type="Texture2D" uid="uid://b3nkicuxw3tc6" path="res://assets/shop_menu/right.svg" id="8_al1lx"]

[sub_resource type="Animation" id="Animation_mcpmh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-156.5, -70)]
}

[sub_resource type="Animation" id="Animation_lfggu"]
resource_name = "start"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(2, -2),
"update": 0,
"values": [Vector2(-156.5, -70), Vector2(-156.5, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BopAnimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["bop", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhcxy"]
_data = {
"RESET": SubResource("Animation_mcpmh"),
"start": SubResource("Animation_lfggu")
}

[sub_resource type="Animation" id="Animation_qyawj"]
resource_name = "bop"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-156.5, 0), Vector2(-156.5, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qa3pj"]
_data = {
"bop": SubResource("Animation_qyawj")
}

[sub_resource type="Animation" id="Animation_nj2nt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b1osr"]
resource_name = "swing"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0174533, -0.0174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_38uol"]
_data = {
"RESET": SubResource("Animation_nj2nt"),
"swing": SubResource("Animation_b1osr")
}

[sub_resource type="LabelSettings" id="LabelSettings_eoyry"]
font_color = Color(0.156863, 0.156863, 0.156863, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ie1xi"]
line_spacing = 0.0
font_size = 12
font_color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="AcheivementMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dqqfi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -176.0
offset_top = -67.0
offset_right = 663.0
offset_bottom = 466.0
texture = ExtResource("1_pakht")

[node name="BackButton" parent="." instance=ExtResource("1_ciaxs")]
custom_minimum_size = Vector2(132, 65)
layout_mode = 0
offset_left = 6.0
offset_top = 322.0
offset_right = 138.0
offset_bottom = 387.0
scale = Vector2(0.5, 0.5)
scene_filepath = "res://userinterfaces/main_menu/main_menu.tscn"
texture = ExtResource("2_66r80")

[node name="Sign" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 52.0
offset_top = -76.0
offset_right = 92.0
offset_bottom = -36.0
grow_horizontal = 2

[node name="Sign" type="TextureRect" parent="Sign"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.5
offset_top = -70.0
offset_right = 52.5
offset_bottom = 217.0
grow_horizontal = 2
pivot_offset = Vector2(180, 0)
texture = ExtResource("6_etgnq")

[node name="EntranceAnimation" type="AnimationPlayer" parent="Sign/Sign"]
libraries = {
"": SubResource("AnimationLibrary_uhcxy")
}
autoplay = "start"

[node name="BopAnimation" type="AnimationPlayer" parent="Sign/Sign"]
libraries = {
"": SubResource("AnimationLibrary_qa3pj")
}

[node name="SwingAnimation" type="AnimationPlayer" parent="Sign/Sign"]
libraries = {
"": SubResource("AnimationLibrary_38uol")
}
autoplay = "swing"

[node name="TitleLabel" type="Label" parent="Sign/Sign"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -64.0
offset_right = 89.5
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
text = "Cool Title"
label_settings = SubResource("LabelSettings_eoyry")

[node name="DescriptionLabel" type="Label" parent="Sign/Sign"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -44.0
offset_right = 94.5
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "example description"
label_settings = SubResource("LabelSettings_ie1xi")
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -20.0
offset_right = 97.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftButton" parent="HBoxContainer" instance=ExtResource("6_dwlpw")]
custom_minimum_size = Vector2(29, 38)
layout_mode = 2
texture = ExtResource("7_of2x6")
float_distance = 2.0

[node name="Pad" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="RightButton" parent="HBoxContainer" instance=ExtResource("6_dwlpw")]
custom_minimum_size = Vector2(29, 38)
layout_mode = 2
texture = ExtResource("8_al1lx")
float_distance = 2.0

[connection signal="pressed" from="HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
